--- a/survey/core/templates/core/report_list.html
+++ b/survey/core/templates/core/report_list.html
@@ -1,5 +1,7 @@
-{% extends 'base.html' %}
+{% extends '_base.html' %}
 
 {% block content %}
-
+{% for report in reports %}
+{{report}}
+{% endfor %}
 {% endblock content %}
