--- a/survey/core/templates/core/site_detail.html
+++ b/survey/core/templates/core/site_detail.html
@@ -34,9 +34,10 @@
                                     <i class="la la-cogs"></i> Manage
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="btnGroupDrop2">
-                                    <a class="dropdown-item" href="#"><i class="la la-user"></i> People</a>
-                                    <a class="dropdown-item" href="#"><i class="la la-tasks"></i> Forms</a>
-                                    <a class="dropdown-item" href="#"><i class="la la-cog"></i> Settings</a>
+                                    <a class="dropdown-item" href="{% url 'userrole:field_engineer_create' object.pk %}"><i class="la la-user"></i> People</a>
+                                    <a class="dropdown-item" href="{% url 'core:site_update' site.pk %}"><i class="la la-cog"></i> Edit</a>
+                                    <a class="dropdown-item" href="{% url 'core:site_delete' site.pk %}"><i class="la la-cog"></i> Delete</a>
+
                                 </div>
                             </div>
                         </div>
