--- a/survey/templates/_base.html
+++ b/survey/templates/_base.html
@@ -95,12 +95,12 @@
 						<div class="user-avatar">
                             <img src="{% static 'assets/img/logo.png'  %}">
 						</div>
-						<span class="hidden-sm hidden-xs">Bikrant</span>
+						<span class="hidden-sm hidden-xs">{{request.user}}</span>
 					</a>
 					<div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButtonUser">
 						<a class="dropdown-item" href="#"><i class="la la-user"></i> My Profile</a>
 						<a class="dropdown-item" href="#"><i class="la la-key"></i> Change Password</a>
-						<a class="dropdown-item" href="login.php"><i class="la la-sign-out"></i> Logout</a>
+						<a class="dropdown-item" href="{% url 'logout' %}"><i class="la la-sign-out"></i> Logout</a>
 					</div>
 				</li>
 		    </ul>
