--- a/survey/core/templates/core/site_detail.html
+++ b/survey/core/templates/core/site_detail.html
@@ -143,6 +143,8 @@
                                             minutes ago
                                         </small>
                                     </li>
+                                        {% empty %}
+                                        No steps Found.
 
                                    {% endfor %}
 
@@ -174,6 +176,8 @@
                                             minutes ago
                                         </small>
                                     </li>
+                                   {% empty %}
+                                        No Materials Found.
 
                                    {% endfor %}
 
@@ -206,6 +210,8 @@
                                             minutes ago
                                         </small>
                                     </li>
+                                    {% empty %}
+                                        No Reports Found.
 
                                    {% endfor %}
 
