--- a/survey/core/templates/core/site_confirm_delete.html
+++ b/survey/core/templates/core/site_confirm_delete.html
@@ -6,7 +6,8 @@
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="{% url 'core:project_dashboard' %}">Dashboard</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">{{ object }}</li>
+                    <li class="breadcrumb-item"><a href="{% url 'core:site_detail' object.pk %}">{{ object }}</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">Delete</li>
                 </ol>
             </nav>
         </div>
