--- a/survey/core/templates/core/site_confirm_delete.html
+++ b/survey/core/templates/core/site_confirm_delete.html
@@ -4,9 +4,10 @@
     <div class="row no-gutters">
         <div class="col-md-12">
             <nav aria-label="breadcrumb">
-                <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="{% url 'core:project_dashboard' %}">Dashboard</a></li>
-                    <li class="breadcrumb-item"><a href="{% url 'core:site_detail' object.pk %}">{{ object }}</a></li>
+                <ol class="breadcrumb">{% if request.user.is_superuser %}
+                    <li class="breadcrumb-item"><a href="{% url 'core:admin_dashboard' %}">Dashboard</a></li>
+                    {% else %}<li class="breadcrumb-item"><a href="{% url 'core:project_dashboard' %}">Dashboard</a></li>
+                    {% endif %}<li class="breadcrumb-item"><a href="{% url 'core:site_detail' object.pk %}">{{ object }}</a></li>
                     <li class="breadcrumb-item active" aria-current="page">Delete</li>
                 </ol>
             </nav>
