--- a/survey/core/templates/core/dashboard.html
+++ b/survey/core/templates/core/dashboard.html
@@ -5,8 +5,11 @@
 <div class="row no-gutters">
         <div class="col-md-12">
             <nav aria-label="breadcrumb">
-                <ol class="breadcrumb">
+                <ol class="breadcrumb">{% if request.user.is_superuser %}
                     <li class="breadcrumb-item"><a href="{% url 'core:admin_dashboard' %}">Dashboard</a></li>
+                    {% else %}
+                    <li class="breadcrumb-item"><a href="{% url 'core:project_dashboard' %}">Dashboard</a></li>
+                    {% endif %}
                     <li class="breadcrumb-item active" aria-current="page"></li>
                 </ol>
             </nav>
