--- a/survey/core/templates/core/material_list.html
+++ b/survey/core/templates/core/material_list.html
@@ -5,9 +5,10 @@
     <div class="row no-gutters">
         <div class="col-md-12">
             <nav aria-label="breadcrumb">
-                <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="{% url 'core:project_dashboard' %}">Dashboard</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">Material List</li>
+                <ol class="breadcrumb">{% if request.user.is_superuser %}
+                    <li class="breadcrumb-item"><a href="{% url 'core:admin_dashboard' %}">Dashboard</a></li>
+                    {% else %}<li class="breadcrumb-item"><a href="{% url 'core:project_dashboard' %}">Dashboard</a></li>
+                    {% endif %}<li class="breadcrumb-item active" aria-current="page">Material List</li>
                 </ol>
             </nav>
         </div>
@@ -56,7 +57,7 @@
                                     <p>Not materials Found.
                                     </p>
                                 {% endif %}<br>
-                                <strong><a href="{% url 'core:material_create' this_project.pk %}">Create
+                                <strong><a href="{% url 'core:material_create' project.pk %}">Create
                                     New</a></strong>
                             </div>
                         </div>
