--- a/survey/core/templates/core/project_dashboard.html
+++ b/survey/core/templates/core/project_dashboard.html
@@ -112,6 +112,7 @@
                                                 class="la la-caret-right"></i> More</a>
 
                                 {% endif %}
+                                <a href="{% url 'core:material_create' project.pk %}">Create New</a>
                             </div>
                             <div class="widget-body">
                                 <ul class="submission-list">
@@ -134,36 +135,21 @@
                         </div>
                         <div class="widget-info margin-top-large">
                             <div class="widget-head">
-                                <h4>Graph</h4>
+                                <h4>Manage User</h4>
                                 {% if if_material %}
                                         <a href="{% url 'core:material_list' project.pk %}" title=""
                                            class="btn btn-sm btn-xs btn-primary"><i
                                                 class="la la-caret-right"></i> More</a>
                                 {% endif %}
+                            <a href="{% url 'core:user_create' %}">Create User</a>
                             </div>
                             <div class="widget-body">
                                 <ul class="submission-list">
-                                    {% for obj in materials_list %}
-                                        {% if obj.0 %}
-                                            <li>
-                                                <img src="assets/img/img-school.png" alt="">
-                                                <a title="View submission detail"
-                                                   href="{% url 'core:material_detail' obj.0 %}"><strong>{{ obj.1 }}</strong></a>
-                                                <br>
-                                                <a href="{% url 'core:category_update' obj.2 %}" title="View details of user">
-                                                    <small><i class="la la-user"></i>{{ obj.3 }}</small>
-                                                </a>
-                                            </li>{% else %}<p>No Materials Found.</p>
-                                            {#                                    <strong><a href="{% url 'core:material_create' project.pk %}">Create New</a></strong>#}
-                                        {% endif %}
-                                    {% endfor %}
-                                <h4>Manage User</h4>
+                                    <div class="widget-body">
+                                        <ul class="submission-list">
 
-                            </div>
-                            <div class="widget-body">
-                                <ul class="submission-list">
-                                    <a href="{% url 'core:user_create' %}">Create User</a>
-                                </ul>
+                                        </ul>
+                                    </div>
                             </div>
                         </div>
                         <div class="widget-info margin-top-large">
@@ -174,6 +160,7 @@
                                            class="btn btn-sm btn-xs btn-primary"><i
                                                 class="la la-caret-right"></i> More</a>
                                 {% endif %}
+                            <a href="{% url 'core:category_create' project.pk %}">Create New</a>
                             </div>
                             <div class="widget-body">
                                 <ul class="submission-list">
@@ -186,8 +173,6 @@
                                 {% else %}
                                     <p>No Categories Found.</p>
                                 {% endif %}
-                                <strong><a href="{% url 'core:category_create' project.pk %}">Create New</a></strong>
-
                                 </ul>
                             </div>
                         </div>
