--- a/survey/core/templates/core/dashboard.html
+++ b/survey/core/templates/core/dashboard.html
@@ -14,7 +14,7 @@
                 </ol>
             </nav>
         </div>
-            <div class="col-md-4 col-lg-3">
+    <div class="col-md-4 col-lg-3"><a href="{% url 'core:project_create' %}"><h4>New Project</h4></a>
                 <div class="module-school-list">
                     <div class="school-wrap">
                         <ul class="school-list">
