--- a/survey/userrole/templates/userrole/userrole_form.html
+++ b/survey/userrole/templates/userrole/userrole_form.html
@@ -8,7 +8,7 @@
                 <ol class="breadcrumb">{% if request.user.is_superuser %}
                     <li class="breadcrumb-item"><a href="{% url 'core:admin_dashboard' %}">Dashboard</a></li>
                     {% else %}<li class="breadcrumb-item"><a href="{% url 'core:project_dashboard' %}">Dashboard</a></li>
-                    {% endif %}<li class="breadcrumb-item"><a href="{% url 'core:site_detail' site.pk %}">{{ site }}</a></li>
+                    {% endif %}
                     <li class="breadcrumb-item active" aria-current="page">People</li>
                 </ol>
             </nav>
