Assign Project Manager

--- a/survey/core/templates/core/project_detail.html
+++ b/survey/core/templates/core/project_detail.html
@@ -37,6 +37,7 @@
                         <div class="widget-info margin-top-large">
                             <div class="widget-head">
                                 <h4><a href="#" title="">Project Info</a></h4>
+                                <a href="{% url 'userrole:userrole_create' project.pk %}"><h5>Assign Project Manager</h5></a>
                             </div>
                             <div class="widget-body">
                                 <h5>Name</h5><br>
