--- a/survey/core/templates/core/site_confirm_delete.html
+++ b/survey/core/templates/core/site_confirm_delete.html
@@ -6,7 +6,7 @@
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">{% if request.user.is_superuser %}
                     <li class="breadcrumb-item"><a href="{% url 'core:admin_dashboard' %}">Dashboard</a></li>
-                    {% else %}<li class="breadcrumb-item"><a href="{% url 'core:project_dashboard' %}">Dashboard</a></li>
+                    {% else %}<li class="breadcrumb-item"><a href="{% url 'core:project_dashboard' project.pk %}">Dashboard</a></li>
                     {% endif %}<li class="breadcrumb-item"><a href="{% url 'core:site_detail' object.pk %}">{{ object }}</a></li>
                     <li class="breadcrumb-item active" aria-current="page">Delete</li>
                 </ol>
@@ -27,7 +27,6 @@
                                 </li>
                             {% endfor %}
                         {% else %}
-                            {% for project in project %}
                                 {% for site in project.sites.all %}
                                     <li>
                                         <a href="{% url 'core:site_detail' site.pk %}" title="">
@@ -37,7 +36,6 @@
                                         </a>
                                     </li>
                                 {% endfor %}
-                            {% endfor %}
                         {% endif %}
                     </ul>
                 </div>
