--- a/survey/core/templates/core/project_dashboard.html
+++ b/survey/core/templates/core/project_dashboard.html
@@ -7,12 +7,12 @@
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">{% if request.user.is_superuser %}
                     <li class="breadcrumb-item"><a href="{% url 'core:admin_dashboard' %}">Dashboard</a></li>
-                    {% else %}<li class="breadcrumb-item"><a href="{% url 'core:project_dashboard' %}">Dashboard</a></li>
+                    {% else %}<li class="breadcrumb-item"><a href="{% url 'core:project_dashboard' project.pk %}">Dashboard</a></li>
                     {% endif %}<li class="breadcrumb-item active" aria-current="page">{{ object }}</li>
                 </ol>
             </nav>
         </div>
-        <div class="col-md-4 col-lg-3"><a href="{% url 'core:site_create' project_id %}"><h5>Add New Site</h5>
+        <div class="col-md-4 col-lg-3"><a href="{% url 'core:site_create' project.pk %}"><h5>Add New Site</h5></a>
             <div class="module-school-list">
                 <div class="school-wrap">
                     <ul class="school-list">
@@ -35,7 +35,7 @@
                     <div class="col-md-6">
                         <div class="widget-info margin-top-large">
                             <div class="widget-head">
-                                <a href="{% url 'core:project_update' project_id %}"><h4>Edit Project</h4></a>
+                                <a href="{% url 'core:project_update' project.pk%}"><h4>Edit Project</h4></a>
                                 <h4>Project Details</h4>
                             </div>
                             <div class="widget-head">
